--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
 
     <h1 id="prod.notables">Productos Notables</h1>
 
-    <div class="equation my-5">
+    <div class="equation d-flex gap-3 flex-column my-5">
 
-      <span>(a ± b)<sup>2</sup> = a<sup>2</sup> ± 2ab + b<sup>2</sup></span>
+      <span>(a - b).(a + b) = a<sup>2</sup> - b<sup>2</sup> </span>
 
+      <span>(a <span class="text-danger">±</span>  b)<sup>2</sup> = a<sup>2</sup> <span class="text-danger">±</span> 2.a.b + b<sup>2</sup></span>
+
+      <span>(a <span class="text-danger">±</span> b)<sup>3</sup> = a<sup>3</sup> <span class="text-danger">±</span> 3.(a)<sup>2</sup>.b + 3.a.(b)<sup>2</sup> <span class="text-danger">±</span> b<sup>3</sup></span>
     </div>
 
 
