--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
 
       <div class="d-flex flex-column gap-4">
-        <h4 class="mb-4">Planteo de paravola</h4>
+        <h4 class="mb-4">Planteo de parabola</h4>
 
         <div>
           <h6>Reales y Distintas ( corta al eje x, dos soluciones reales distintas,corta dos veces )</h6>
